main/default/objects/EmailValidationParameter__mdt/EmailValidationParameter__mdt.object-meta.xml
<CustomObject>
    <description>Contains custom metadata for streamlining email workflows in any sobject. One metadata record contains specifications about the SObject Type, what status picklist to use, and which email template is required to proceed in the mapped stage.</description>
    <label>Email Validation Parameter</label>
    <pluralLabel>Email Validation Parameters</pluralLabel>
</CustomObject>