main/default/objects/EmailValidationParameter__mdt/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error Message that is displayed when a user tries to proceed in the process without having send the required email template.</description>
    <inlineHelpText>Error Message that is displayed when a user tries to proceed in the process without having send the required email template.</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>