main/default/objects/EmailValidationParameter__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order of the status picklist item. Used to compare if the user progresses in the process or not.
(Example: New = 1, Qualification = 2, Converted = 3).</description>
    <inlineHelpText>The order of the status picklist item. Used to compare if the user progresses in the process or not.
(Example: New = 1, Qualification = 2, Converted = 3).</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>