main/default/objects/EmailValidationParameter__mdt/fields/RelevantTemplates__c.field-meta.xml
<CustomField>
    <fullName>RelevantTemplates__c</fullName>
    <description>Comma-separated list of relevant E-Mail Templates for any given stage. Use Developer Name of Email Template record.</description>
    <inlineHelpText>Comma-separated list of relevant E-Mail Templates for any given stage. Use Developer Name of Email Template record.</inlineHelpText>
    <label>Relevant Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>