main/default/objects/EmailValidationParameter__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>API Name of SObject used in Email Validation.</description>
    <inlineHelpText>API Name of SObject used in Email Validation.</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>