main/default/objects/EmailValidationParameter__mdt/fields/StatusField__c.field-meta.xml
<CustomField>
    <fullName>StatusField__c</fullName>
    <description>API Name of Status Field for Email Validation Process.</description>
    <inlineHelpText>API Name of Status Field for Email Validation Process.</inlineHelpText>
    <label>Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>